<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kiori.helpapplogin2.Log_in.Signup"
    android:background="#ffffff">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/emailsignup"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Name"
        android:textColorHint="#c3bfbf"
        android:textSize="30dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/borderblack"
        android:editable="true"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/name"
        android:layout_below="@+id/emailsignup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:hint="@string/email"
        android:textColorHint="#c3bfbf"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borderblack"
        android:editable="true"
        android:inputType="textEmailAddress"
        android:textColor="#000000" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/passwordsignup"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/password"
        android:textColorHint="#c3bfbf"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borderblack"
        android:editable="true"
        android:inputType="textPassword"
        android:textColor="#000000" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/repeat"
        android:layout_below="@+id/passwordsignup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/passwordagin"
        android:textColorHint="#c3bfbf"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borderblack"
        android:editable="true"
        android:inputType="textPassword"
        android:textColor="#000000" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/date"
        android:id="@+id/date"
        android:textSize="20dp"
        android:layout_below="@+id/repeat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="Sign Up"
        android:id="@+id/signup1"
        android:layout_below="@+id/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:background="#9A29AF"
        android:textAllCaps="false"

        android:textColor="#ffffff"
        android:textSize="30dp" />



</RelativeLayout>

