<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kiori.helpapplogin2.Log_in"
    android:clickable="false"
    android:backgroundTintMode="screen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:background="@drawable/backwithborder"
        android:hint="@string/email"
        android:textColorHint="#FFFFFF"
        android:height="40dp"
        android:textSize="30dp"
        android:gravity="left"
        android:layout_above="@+id/Password"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password"
        android:background="@drawable/backwithborder"
        android:gravity="left"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:textSize="30dp"
        android:autoText="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:id="@+id/login"
        android:gravity="center"
        android:textSize="30dp"
        android:background="#01A9F0"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textColor="#ffffff"
        android:textAllCaps="false" />

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:id="@+id/signup"
        android:background="#9A29AF"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_below="@+id/login"
        android:layout_alignLeft="@+id/Password"
        android:layout_alignStart="@+id/Password"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textAllCaps="false"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:background="@drawable/helpicon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About us"
        android:id="@+id/aboutus"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#0000"/>

</RelativeLayout>
